tests/bad/duplicate_objects.glaz
fn main() {
	let mut x = 10;
	{
		let mut x = 10;
	}
}
